modified some CSS to change a bit of the color, give spacing for the footer, and change footer from fixed to non-fixed

--- a/src/AddRoomie/AddRoomie.css
+++ b/src/AddRoomie/AddRoomie.css
@@ -2,3 +2,7 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.shareform {
+    margin-bottom: 250px;
+}
