--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ body p {
 nav,
 footer {
   padding: 1% 0;
-  background-color: #aaa;
+  background-color: rgb(255, 173, 96);
 }
 
 nav {
@@ -35,7 +35,7 @@ nav {
 }
 
 section {
-  min-height: 200px;
+  min-height: 100px;
   padding: 0% 10% 20% 10%;
   /* background-color: #bbb; */
 }
