--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,7 +1,7 @@
   
 footer {
+    font-size: 16px;
     text-align: center;
-    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;  
