--- a/src/Landing/Landing.css
+++ b/src/Landing/Landing.css
@@ -1,5 +1,6 @@
 .landingPage {
     margin-left: auto;
     margin-right: auto;
+    min-height: 600px;
     max-width: 950px;
 }
