--- a/src/Roomie/Roomie.css
+++ b/src/Roomie/Roomie.css
@@ -22,7 +22,7 @@ p {
   }
   
 .tooltipContent {
-    color: rgb(54, 69, 204);
+    color: rgb(248, 140, 38);
 }
 
 .tooltipMessage {
